--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,10 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_meal_plan">Schedule Meals</string>
-
+    <string name="reference_amount">Reference Amount</string>
+    
+    <string name="nutrient_type_energy">Energy</string>
+    <string name="nutrient_type_protein">Protein</string>
+    <string name="nutrient_type_carbs">Carbs</string>
+    <string name="nutrient_type_fat">Fat</string>
 </resources>
