--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="nutrition">Nutrition</string>
     
     <string name="form_error_product_label_empty">Product label is empty</string>
+    
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
 </resources>
