--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,4 +30,6 @@
     
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
+    
+    <string name="placeholder_empty">(empty)</string>
 </resources>
