--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,6 +28,9 @@
     <string name="form_error_product_label_empty">Product label is empty</string>
     <string name="form_error_product_nutrition_is_null">Nutrition info is missing</string>
     
+    <string name="dialog_confirm_delete_title">Confirm Delete</string>
+    <string name="dialog_confirm_delete_msg">Do you really want to delete:</string>
+    
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     
