--- a/TODO.txt
+++ b/TODO.txt
@@ -15,7 +15,6 @@ Styling
 
 User Interface
 * Edit goals by clicking on watch widget
-* swipe screen to change date
 * Watch Row for each ingredient?
 
 
@@ -48,3 +47,7 @@ Goals
 * goal history (apply goals for the time they were active)
 * set goals per meal, week, and month
 * meal status
+
+User Interface
+* animate date change fling
+
