updated recipe form to multicatalog

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="title_pick_unit">Select Unit</string>
     <string name="title_pick_recipe">Select A Recipe</string>
     <string name="title_pick_for_shopping">Select Shopping Items</string>
+    <string name="title_pick_ingredients">Select Ingredients</string>
     
     <string name="nutrient_type_energy">Energy</string>
     <string name="nutrient_type_protein">Protein</string>
