--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -33,10 +33,38 @@
     <string name="nutrient_type_carbs">Carbs</string>
     <string name="nutrient_type_fat">Fat</string>
     <string name="nutrient_type_saturated_fat">Saturated Fat</string>
+    <string name="nutrient_type_omega3">Omega-3</string>
+    <string name="nutrient_type_omega6">Omega-6</string>
     <string name="nutrient_type_cholesterol">Cholesterol</string>
     <string name="nutrient_type_sodium">Sodium</string>
+    <string name="nutrient_type_potassium">Potassium</string>
     <string name="nutrient_type_fiber">Dietary Fiber</string>
     <string name="nutrient_type_sugar">Sugars</string>
+    <string name="nutrient_type_vitamin_a">Vitamin A</string>
+    <string name="nutrient_type_vitamin_b1">Vitamin B1</string>
+    <string name="nutrient_type_vitamin_b2">Vitamin B2</string>
+    <string name="nutrient_type_vitamin_b3">Niacin</string>
+    <string name="nutrient_type_vitamin_b5">Pantothenic Acid</string>
+    <string name="nutrient_type_vitamin_b6">Vitamin B6</string>
+    <string name="nutrient_type_vitamin_b7">Biotin</string>
+    <string name="nutrient_type_vitamin_b9">Folic Acid</string>
+    <string name="nutrient_type_vitamin_b12">Vitamin B12</string>
+    <string name="nutrient_type_vitamin_c">Vitamin C</string>
+    <string name="nutrient_type_vitamin_d">Vitamin D</string>
+    <string name="nutrient_type_vitamin_e">Vitamin E</string>
+    <string name="nutrient_type_vitamin_k">Vitamin K</string>
+    <string name="nutrient_type_calcium">Calcium</string>
+    <string name="nutrient_type_iron">Iron</string>
+    <string name="nutrient_type_phosphor">Phosphor</string>
+    <string name="nutrient_type_magnesium">Magnesium</string>
+    <string name="nutrient_type_zinc">Zinc</string>
+    <string name="nutrient_type_iodine">Iodine</string>
+    <string name="nutrient_type_selenium">Selenium</string>
+    <string name="nutrient_type_copper">Copper</string>
+    <string name="nutrient_type_manganese">Manganese</string>
+    <string name="nutrient_type_chromium">Chromium</string>
+    <string name="nutrient_type_molybdenum">Molybdenum</string>
+    <string name="nutrient_type_chloride">Cholride</string>
     
     <string name="amount">Amount</string>
     <string name="product">Product</string>
