tab dialog action/connector, dialog views, dates picker for shopping list

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="title_pick_recipe">Select A Recipe</string>
     <string name="title_pick_for_shopping">Select Shopping Items</string>
     <string name="title_pick_ingredients">Select Ingredients</string>
+    <string name="title_date_period">Date Period</string>
     
     <string name="nutrient_type_energy">Energy</string>
     <string name="nutrient_type_protein">Protein</string>
